tests/ui/consts/const_unsafe_unreachable_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/hint.rs:LL:COL
   |
   = note: entering unreachable code
   |
note: inside `unreachable_unchecked`
  --> $SRC_DIR/core/src/hint.rs:LL:COL
note: inside `foo`
  --> $DIR/const_unsafe_unreachable_ub.rs:6:18
   |
LL |         false => std::hint::unreachable_unchecked(),
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `BAR`
  --> $DIR/const_unsafe_unreachable_ub.rs:10:28
   |
LL | const BAR: bool = unsafe { foo(false) };
   |                            ^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/const_unsafe_unreachable_ub.rs:13:16
   |
LL |     assert_eq!(BAR, true);
   |                ^^^

note: erroneous constant encountered
  --> $DIR/const_unsafe_unreachable_ub.rs:13:16
   |
LL |     assert_eq!(BAR, true);
   |                ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/const_unsafe_unreachable_ub.rs:13:5
   |
LL |     assert_eq!(BAR, true);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this note originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/const_unsafe_unreachable_ub.rs:13:5
   |
LL |     assert_eq!(BAR, true);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this note originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
